# elden-botany-corpus

./: .editorconfig  .env.example  .envrc.example  .gitignore  AGENTS.md  CONTRIBUTING.md  KAGGLE_INGESTION_SUMMARY.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  SECURITY.md  TODO.md  VALIDATION_SUMMARY.md  instructions.md  pyproject.toml  pyrightconfig.json  pytest.ini  tarnishedbotanist_roadmap.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  kaggle-integration.yml  nightly-refresh.yml  process-data.yml
artifacts/: analysis-smoke-test.txt
config/: community_motifs.yml  kaggle_datasets.yml  text_type_weights.yml
data/: README.md
data/community/: README.md
data/curated/: metadata.json
data/debug/: carian_speaker_audit.parquet  unmapped_carian_dialogue.csv
data/reference/: entity_aliases.csv  npc_motif_overrides.yaml
docker/: Dockerfile  compose.example.yml
docs/: community-corpus-schema.md  community_tooling_plan.md  corpus-architecture.md  data-processing.md  entity_aliasing.md  kaggle-integration.md  motif-taxonomy.md
docs/debug/: carian_speaker_audit.md
docs/pipelines/: analysis_smoke_test.md  motif_clustering.md  narrative_summarizer.md
eval/: rag_weighting_evaluation.md  reranker_benchmark.json
examples/: notebook_overview.ipynb
infra/terraform/: README.md  control-plane.tf  locals.tf  outputs.tf  (+3 more)
notebooks/: qualitative_rag_eval.ipynb
pipeline/: __init__.py  process.py  schemas.py  utils.py
pipelines/: curate_corpus.yml
scripts/: README.md  __init__.py  analysis_smoke_test.sh  audit_carian_speakers.py  build_corpus.py  corpus_stats.py  download_kaggle_dataset.py  lint.sh  npc_summary_coverage.py  process_data.py  setup.sh  setup_kaggle_creds.py  test.sh
sql/: 001_enable_extensions.sql  010_schema.sql  020_indexes.sql
tests/: __init__.py  conftest.py  helpers.py  test_analysis_cli.py  test_carian_fmg_ingest.py  test_carian_fmg_loader.py  test_cli_incremental.py  test_community_bundle.py  test_community_pipeline.py  test_community_schema.py  test_corpus_stats_cli.py  test_coverage_audit.py  test_download_kaggle_dataset.py  test_entity_aliasing.py  test_github_fallbacks.py  test_impalers.py  test_incremental_helpers.py  test_ingest_kaggle.py  test_lineage.py  test_lore_corpus_pipeline.py  test_lore_embeddings_pipeline.py  test_models.py  test_motif_clustering.py  test_motif_coverage.py  test_narrative_summarizer.py  test_npc_motif_graph.py  test_openai_client.py  test_pg_integration_e2e.py  test_pgvector_loader.py  test_pipelines_aliasing.py  test_process_data.py  test_processing_pending.py  test_quality_reports.py  test_rag_guard.py  test_rag_index_pipeline.py  test_rag_query.py  test_reconcile.py  test_reranker.py  test_speech_motifs_pipeline.py  test_utils.py  (+1 more)
(+188 files in other folders)
