[tool.poetry]
name = "elden-botany-corpus"
version = "0.1.0"
description = "Curated Elden Ring game data corpus for RAG and analytics (base game + Shadow of the Erdtree DLC)"
authors = ["Elden Botany Corpus Contributors"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "corpus", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
pandas = "^2.1.0"
polars = "^0.19.0"
pyarrow = "^14.0.0"
duckdb = "^0.9.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
psycopg = {extras = ["binary"], version = "^3.1.0"}
pgvector = "^0.2.0"
tqdm = "^4.66.0"
python-dotenv = "^1.0.0"
click = "^8.1.0"
pyyaml = "^6.0.0"
sentence-transformers = {version = "^2.2.0", optional = true}
openai = {version = "^1.3.0", optional = true}
Levenshtein = "^0.23.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
mypy = "^1.7.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ipython = "^8.17.0"
jupyter = "^1.0.0"
pandas-stubs = "^2.1.0"
types-requests = "^2.31.0"
types-beautifulsoup4 = "^4.12.0"
types-tqdm = "^4.66.0"
types-pyyaml = "^6.0.0"

[tool.poetry.extras]
embeddings-local = ["sentence-transformers"]
embeddings-openai = ["openai"]

[tool.poetry.scripts]
corpus = "corpus.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "polars.*",
    "duckdb.*",
    "pgvector.*",
    "Levenshtein.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=corpus --cov-report=term-missing"

[tool.coverage.run]
source = ["src/corpus"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
